# checker

./: .travis.yml  Cargo.toml  README.md  check_init_asserts  doc_aliases.py
.github/workflows/: CI.yml
src/: gir_files.rs  license.rs  main.rs  manual_traits.rs  types.rs
